@@ -1356,7 +1356,9 @@ typedef enum
     GPGME_ENCRYPT_WRAP = 128,
     GPGME_ENCRYPT_WANT_ADDRESS = 256,
     GPGME_ENCRYPT_ARCHIVE = 512,
-    GPGME_ENCRYPT_FILE = 1024
+    GPGME_ENCRYPT_FILE = 1024,
+    GPGME_ENCRYPT_ADD_RECP = 2048,
+    GPGME_ENCRYPT_CHG_RECP = 4096
   }
 gpgme_encrypt_flags_t;
 
